--- a/Project2/View/CollectionReusableView.xib
+++ b/Project2/View/CollectionReusableView.xib
@@ -12,27 +12,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionReusableView" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionReusableView" id="U6b-Vx-4bR" customClass="CollectionReusableView" customModule="Project2" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="398" height="61"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GzL-93-cRl">
-                    <rect key="frame" x="50" y="10" width="83" height="41"/>
-                    <state key="normal" title="Camera Roll"/>
+                    <rect key="frame" x="50" y="15" width="83" height="31"/>
+                    <state key="normal" title="Camera Roll">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="cameraRollBtnTapped:" destination="U6b-Vx-4bR" eventType="touchUpInside" id="a1Y-RN-k5D"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAs-zE-y3Z">
                     <rect key="frame" x="203" y="15.5" width="45" height="30"/>
-                    <state key="normal" title="Colors"/>
+                    <state key="normal" title="Colors">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <connections>
+                        <action selector="colorsBtnTapped:" destination="U6b-Vx-4bR" eventType="touchUpInside" id="F9L-kV-piK"/>
+                    </connections>
                 </button>
             </subviews>
+            <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="QAs-zE-y3Z" firstAttribute="leading" secondItem="GzL-93-cRl" secondAttribute="trailing" constant="70" id="2bK-DD-cRV"/>
                 <constraint firstItem="GzL-93-cRl" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" constant="50" id="9FE-78-eQq"/>
-                <constraint firstItem="VXr-Tz-HHm" firstAttribute="bottom" secondItem="GzL-93-cRl" secondAttribute="bottom" constant="10" id="Ggf-Wf-Tn4"/>
-                <constraint firstItem="GzL-93-cRl" firstAttribute="top" secondItem="VXr-Tz-HHm" secondAttribute="top" constant="10" id="K3o-9G-BmV"/>
+                <constraint firstItem="VXr-Tz-HHm" firstAttribute="bottom" secondItem="GzL-93-cRl" secondAttribute="bottom" constant="15" id="Ggf-Wf-Tn4"/>
+                <constraint firstItem="GzL-93-cRl" firstAttribute="top" secondItem="VXr-Tz-HHm" secondAttribute="top" constant="15" id="K3o-9G-BmV"/>
                 <constraint firstItem="GzL-93-cRl" firstAttribute="centerY" secondItem="QAs-zE-y3Z" secondAttribute="centerY" id="odq-JY-4bn"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
+            <connections>
+                <outlet property="cameraRollBtn" destination="GzL-93-cRl" id="qwo-RX-ZHf"/>
+                <outlet property="colorsBtn" destination="QAs-zE-y3Z" id="iVJ-JX-QSY"/>
+            </connections>
             <point key="canvasLocation" x="200" y="159.67016491754123"/>
         </collectionReusableView>
     </objects>
