--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -45,56 +45,37 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jHo-S0-vsR">
-                                                <rect key="frame" x="94" y="35" width="30" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="7zg-AD-1Mn"/>
-                                                    <constraint firstAttribute="width" constant="30" id="QAu-UG-ekE"/>
-                                                </constraints>
-                                                <state key="normal" image="noun_Image_927408"/>
+                                                <rect key="frame" x="104" y="30" width="40" height="40"/>
+                                                <state key="normal" image="Icon_image"/>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i3D-7M-9tP">
-                                                <rect key="frame" x="156" y="35" width="30" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="BrX-Gj-LQX"/>
-                                                    <constraint firstAttribute="width" constant="30" id="pT6-sm-moY"/>
-                                                </constraints>
-                                                <state key="normal" image="noun_down_217756"/>
+                                                <rect key="frame" x="176" y="30" width="40" height="40"/>
+                                                <state key="normal" image="Icon_shape"/>
                                                 <connections>
                                                     <action selector="downBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QWa-mD-Zi7"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cau-ql-3Op">
-                                                <rect key="frame" x="32" y="35" width="30" height="30"/>
+                                                <rect key="frame" x="32" y="30" width="40" height="40"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="cOj-mZ-JQi"/>
-                                                    <constraint firstAttribute="width" constant="30" id="hrC-YN-DR2"/>
+                                                    <constraint firstAttribute="height" constant="40" id="cOj-mZ-JQi"/>
+                                                    <constraint firstAttribute="width" constant="40" id="hrC-YN-DR2"/>
                                                 </constraints>
-                                                <state key="normal" image="noun_text_1010283"/>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2e-tM-qNx">
-                                                <rect key="frame" x="215" y="35" width="30" height="30"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="30" id="SvG-pD-KUI"/>
-                                                    <constraint firstAttribute="height" constant="30" id="pC5-t7-ThE"/>
-                                                </constraints>
-                                                <state key="normal" image="noun_up_217754"/>
-                                                <connections>
-                                                    <action selector="upBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Scp-1r-ffj"/>
-                                                </connections>
+                                                <state key="normal" image="Icon_text"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="i3D-7M-9tP" firstAttribute="leading" secondItem="jHo-S0-vsR" secondAttribute="trailing" constant="32" id="0Nf-nZ-zCy"/>
-                                            <constraint firstItem="m2e-tM-qNx" firstAttribute="leading" secondItem="i3D-7M-9tP" secondAttribute="trailing" constant="29" id="He3-C4-qLd"/>
+                                            <constraint firstItem="jHo-S0-vsR" firstAttribute="height" secondItem="Cau-ql-3Op" secondAttribute="height" id="8Im-oF-DtM"/>
+                                            <constraint firstItem="i3D-7M-9tP" firstAttribute="width" secondItem="Cau-ql-3Op" secondAttribute="width" id="Ddn-E2-PdR"/>
                                             <constraint firstItem="jHo-S0-vsR" firstAttribute="leading" secondItem="Cau-ql-3Op" secondAttribute="trailing" constant="32" id="Iqg-FK-ZLc"/>
                                             <constraint firstItem="Cau-ql-3Op" firstAttribute="centerY" secondItem="ggr-WL-8o8" secondAttribute="centerY" id="LRQ-O0-n6r"/>
                                             <constraint firstItem="i3D-7M-9tP" firstAttribute="centerY" secondItem="jHo-S0-vsR" secondAttribute="centerY" id="O6s-2m-fR7"/>
-                                            <constraint firstItem="m2e-tM-qNx" firstAttribute="centerY" secondItem="i3D-7M-9tP" secondAttribute="centerY" id="ZVB-lM-EeW"/>
-                                            <constraint firstItem="m2e-tM-qNx" firstAttribute="height" secondItem="i3D-7M-9tP" secondAttribute="height" id="eA3-Pn-3vo"/>
+                                            <constraint firstItem="jHo-S0-vsR" firstAttribute="width" secondItem="Cau-ql-3Op" secondAttribute="width" id="Qjs-bp-eDi"/>
+                                            <constraint firstItem="i3D-7M-9tP" firstAttribute="height" secondItem="Cau-ql-3Op" secondAttribute="height" id="Y0w-S0-8ge"/>
                                             <constraint firstItem="jHo-S0-vsR" firstAttribute="centerY" secondItem="Cau-ql-3Op" secondAttribute="centerY" id="fhF-cw-hzf"/>
                                             <constraint firstItem="Cau-ql-3Op" firstAttribute="leading" secondItem="ggr-WL-8o8" secondAttribute="leading" constant="32" id="fyZ-Cb-J7P"/>
-                                            <constraint firstItem="m2e-tM-qNx" firstAttribute="width" secondItem="i3D-7M-9tP" secondAttribute="width" id="lek-WF-zKi"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -120,13 +101,6 @@
                                     <action selector="addBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="C3j-IY-Fuo"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gXg-sg-bNp">
-                                <rect key="frame" x="20" y="411" width="99" height="30"/>
-                                <state key="normal" title="Save to Album"/>
-                                <connections>
-                                    <action selector="saveBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jBO-88-jhf"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NWN-nd-HD5">
                                 <rect key="frame" x="286" y="411" width="69" height="30"/>
                                 <state key="normal" title="Add Label"/>
@@ -142,10 +116,9 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.87450980392156863" green="0.85882352941176465" blue="0.81960784313725488" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0S2-aV-HPz"/>
-                            <constraint firstItem="gXg-sg-bNp" firstAttribute="leading" secondItem="DZf-mM-usS" secondAttribute="leading" id="0dl-oJ-ZEr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ic4-BR-cwQ" secondAttribute="bottom" constant="16" id="Ass-xM-9Rv"/>
                             <constraint firstItem="zg0-Kt-1Ej" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BXC-mn-8V9"/>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EOD-Bq-wnu"/>
@@ -159,7 +132,7 @@
                             <constraint firstItem="WSb-rm-uin" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SOq-Do-m6D"/>
                             <constraint firstItem="k2Y-E1-iHA" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Whc-J1-e2J"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ic4-BR-cwQ" secondAttribute="trailing" constant="16" id="aCz-bw-aE9"/>
-                            <constraint firstItem="gXg-sg-bNp" firstAttribute="top" secondItem="DZf-mM-usS" secondAttribute="bottom" constant="12" id="bne-ch-Uwj"/>
+                            <constraint firstItem="ic4-BR-cwQ" firstAttribute="leading" secondItem="jHo-S0-vsR" secondAttribute="trailing" constant="165" id="bSk-09-WSu"/>
                             <constraint firstItem="gJu-6V-Fph" firstAttribute="centerY" secondItem="NWN-nd-HD5" secondAttribute="centerY" id="mw9-LU-Gil"/>
                             <constraint firstItem="zg0-Kt-1Ej" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="s4e-vF-w2d"/>
                             <constraint firstItem="DZf-mM-usS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="wa0-V2-l3L"/>
@@ -172,8 +145,9 @@
                         <outlet property="containerView" destination="k2Y-E1-iHA" id="Hfj-l4-4cr"/>
                         <outlet property="designView" destination="DZf-mM-usS" id="aa8-a9-AGQ"/>
                         <outlet property="scrollView" destination="zg0-Kt-1Ej" id="r3B-mW-Dza"/>
-                        <segue destination="mFr-ri-311" kind="show" id="h0P-ds-aVT"/>
-                        <segue destination="yOG-yq-5Gn" kind="show" id="dE9-Tv-trn"/>
+                        <segue destination="mFr-ri-311" kind="show" identifier="imageEditSwgue" id="h0P-ds-aVT"/>
+                        <segue destination="yOG-yq-5Gn" kind="show" identifier="textEditSegue" id="dE9-Tv-trn"/>
+                        <segue destination="cZy-UR-sAT" kind="show" identifier="addImageSegue" id="gKH-4I-5Jp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -233,6 +207,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YpV-Ws-kQ7">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -253,26 +228,17 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wMA-6g-Hwm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="218"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Iml-R0-9KP">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="VY7-b7-kPf">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="wMA-6g-Hwm" firstAttribute="trailing" secondItem="GWu-x6-JAE" secondAttribute="trailing" id="2nv-Th-3lO"/>
                             <constraint firstItem="wMA-6g-Hwm" firstAttribute="leading" secondItem="GWu-x6-JAE" secondAttribute="leading" id="OEZ-4f-zqC"/>
@@ -287,7 +253,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hru-rT-4va" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="797.60000000000002" y="14.392803598200901"/>
+            <point key="canvasLocation" x="786" y="7"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="5WG-tX-UA3">
+            <objects>
+                <viewController id="cZy-UR-sAT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pV4-Vj-r06">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="DpI-SP-6Zo"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nob-MQ-c62" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1479" y="339"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Eyq-Ma-FeX">
@@ -308,7 +289,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tzn-dz-Wnn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1693.5999999999999" y="199.25037481259372"/>
+            <point key="canvasLocation" x="2276" y="296"/>
         </scene>
         <!--Image Container View Controller-->
         <scene sceneID="1cH-qy-Hdq">
@@ -342,10 +323,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="noun_Image_927408" width="700" height="700"/>
-        <image name="noun_down_217756" width="700" height="700"/>
-        <image name="noun_text_1010283" width="700" height="700"/>
-        <image name="noun_up_217754" width="700" height="700"/>
+        <image name="Icon_image" width="199" height="199"/>
+        <image name="Icon_shape" width="208" height="206"/>
+        <image name="Icon_text" width="173" height="173"/>
         <image name="plus" width="32" height="32"/>
     </resources>
 </document>
